--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,7 @@ html.has-scroll-smooth {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizelegibility;
     text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
+    scroll-behavior: smooth;
   }
 }
 
@@ -51,7 +52,56 @@ html.has-scroll-smooth {
 body {
   overflow-x: hidden;
 }
-body:has(dialog[open]) {overflow: hidden}
+body:has(dialog[open]) {
+  overflow-y: hidden; 
+ 
+
+}
+.confirmation-message {
+  background-color: #17293A;
+  color: #6BC8C4;
+  border: 1px solid #17293A;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.hexagonalImg {
+  clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+  width: 100%;
+  height: 95%;
+  width: 95%;
+  outline: 1px solid #6BC8C4;
+
+}
+.hexagonal-cont {
+  clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+  background-color: #6BC8C4;
+  height: 235px;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+.hexagonalImg2 {
+  clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+  height: 95%;
+  width: 95%;
+  outline: 1px solid #6BC8C4;
+
+}
+.hexagonal-cont2 {
+  clip-path: polygon(50% 0%,100% 25%,100% 75%,50% 100%,0% 75%,0% 25%);
+  background-color: #6BC8C4;
+  height: 300px;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+.featured-image {
+  height: 250px;
+  border-bottom: 3px solid #6BC8C4;
+  background-position: center;
+  background-size: cover;
+  background-color: #6BC8C4;
+}
 .mountains-box  {
   background-image: url('/images/mountains-bg.png');
   background-size: cover;
